# gpt3-api

./: 20.4  README.md  gpt3_api-pad.py  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  rundown.bat_
.husky/: pre-commit
gpt3_api/: __init__.py  __main__.py  clas.py  clas_zs.py  config.py  gpt3_api.py  zh2en.py
tests/: test_assemble_prompt.py  test_clas.py  test_clas_zs.py  test_get_resp.py  test_gpt3_api.py  test_zh2en.py  wu_ch3_en.txt  wu_ch3_zh-tr.txt  wu_ch3_zh.txt
